--- a/ManagedHook.nuspec
+++ b/ManagedHook.nuspec
@@ -6,6 +6,7 @@
     <authors>Simon Tardif-Morneau</authors>
     <owners>Simon Tardif-Morneau</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+	<projectUrl>https://github.com/simontardif/managedhook</projectUrl>
     <description>Managed Hook allows you to hook any methods with a handler that is called when the method hooked is called.</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2019</copyright>
