--- a/ManagedHook.nuspec
+++ b/ManagedHook.nuspec
@@ -7,6 +7,7 @@
     <owners>Simon Tardif-Morneau</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 	<projectUrl>https://github.com/simontardif/managedhook</projectUrl>
+	<license type="file">license.txt</license>
     <description>Managed Hook allows you to hook any methods with a handler that is called when the method hooked is called.</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2019</copyright>
@@ -16,5 +17,6 @@
   </metadata>
   <files>
 	<file src="ManagedHook\bin\Release\*.*" target="lib\net45"/>
+	<file src="license.txt" target="" />
   </files>
 </package>
