--- a/ManagedHook.nuspec
+++ b/ManagedHook.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>ManagedHook</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <authors>Simon Tardif-Morneau</authors>
     <owners>Simon Tardif-Morneau</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 	<projectUrl>https://github.com/simontardif/managedhook</projectUrl>
 	<license type="file">license.txt</license>
     <description>Managed Hook allows you to hook any methods with a handler that is called when the method hooked is called.</description>
-    <releaseNotes></releaseNotes>
+    <releaseNotes>Add parameters of the hooked method.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags></tags>
     <dependencies>
