--- a/ManagedHook.nuspec
+++ b/ManagedHook.nuspec
@@ -8,7 +8,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 	<projectUrl>https://github.com/simontardif/managedhook</projectUrl>
 	<license type="file">license.txt</license>
-    <description>Managed Hook allows you to hook any methods with a handler that is called when the method hooked is called.</description>
+    <description>Managed Hook allows you to hook any methods with a handler that is called when the hooked method is called.</description>
     <releaseNotes>Add parameters of the hooked method.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags></tags>
