--- a/ManagedHook.nuspec
+++ b/ManagedHook.nuspec
@@ -11,7 +11,7 @@
     <description>Managed Hook allows you to hook any methods with a handler that is called when the hooked method is called.</description>
     <releaseNotes>Change the condition if a method can be inlined.</releaseNotes>
     <copyright>Copyright 2019</copyright>
-    <tags></tags>
+    <tags>Hook, Detour</tags>
     <dependencies>
     </dependencies>
   </metadata>
