--- a/ManagedHook.nuspec
+++ b/ManagedHook.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>ManagedHook</id>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
     <authors>Simon Tardif-Morneau</authors>
     <owners>Simon Tardif-Morneau</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 	<projectUrl>https://github.com/simontardif/managedhook</projectUrl>
 	<license type="file">license.txt</license>
     <description>Managed Hook allows you to hook any methods with a handler that is called when the hooked method is called.</description>
-    <releaseNotes>Hook functions with lambda expression.</releaseNotes>
+    <releaseNotes>Use the returned value of the replaced function.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>Hook, Detour</tags>
     <dependencies>
